src/index.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

::-webkit-scrollbar{
    display: none;
}
/* sidebar */
.about a {
    color: #6B7280;
}
.botr{
    border-top-left-radius: 10px;
}
/* .shipment-table{
    width: 100%;
    min-width: 1000px;
}
.ship-table_wrap{
    overflow-x: auto;
    border: 1px solid blueviolet;
} */
table thead tr td{
    padding-bottom: 10px;
}
table tbody td{
    border: solid 1px #E5E7EB;
    border-style: solid none none none;
}
table tbody tr td:first-child{
    border-left-style: solid; 
}
table tbody tr td:last-child{
    border-right-style: solid;
}
table tbody tr:last-child td{
    border-bottom-style: solid;
}
table tbody tr:first-child td:first-child{
    border-top-left-radius: 10px;
}
table tbody tr:first-child td:last-child{
    border-top-right-radius: 10px;
}
table tbody tr:last-child td:first-child{
    border-bottom-left-radius: 10px;
}
table tbody tr:last-child td:last-child{
    border-bottom-right-radius: 10px;
}
.input_container{
    position: relative;
}
.input_container img{
    position: absolute;
    top: 42%;
    left: 15px;
    transform: translateY(-50%);
}
.shipment-button button{
    width: fit-content;
}
/* @media(max-width: 1390px){
    .shipment-button{
        flex-direction: column;
        gap: 25px;
    }
} */

